compiler/tests/compiler/must_fail/t_22.mil
// reuse the same number for different names

extern fn test(x.1, y.1 : stack u64) -> stack u64 {
  x.1 += y.1;
  return x.1;
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
